Updated code that was deprecated in Java 9.